--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -9,7 +9,7 @@
       <h3>Explore Us</h3>
     </div>
 
-    <img src="../../assets/welcome.png" />
+    <img src="https://p.kindpng.com/picc/s/145-1451290_writing-style-clipart-png-transparent-png.png" />
 
     <div class="button-container">
       <ion-button expand="block" class="main-button" routerLink="/login" routerDirection="forward">Log in</ion-button>
